[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.18.0"
anyhow = "1.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
little_raft = "0.2.0"
crossbeam = "0.8"
async-trait = "0.1.57"
async-mutex = "1.4.0"
derivative = "2.2.0"
bytes = "1.2.1"

[build-dependencies]
tonic-build = "0.8"
